adding realtime conversation suggesst

--- a/apps/llm/package.json
+++ b/apps/llm/package.json
@@ -15,6 +15,7 @@
     "test:integration": "bash scripts/integration-test.sh"
   },
   "dependencies": {
+    "@elevenlabs/elevenlabs-js": "^2.35.0",
     "@google/generative-ai": "^0.24.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
