--- a/apps/llm/.env.example
+++ b/apps/llm/.env.example
@@ -6,6 +6,15 @@ NODE_ENV=development
 
 # Google Gemini AI
 GEMINI_API_KEY=your_gemini_api_key_here
+# Optional override for realtime coach model (falls back automatically)
+REALTIME_GEMINI_MODEL=gemini-2.5-flash
+
+# ElevenLabs TTS (Warm, supportive wingman voice)
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+# Optional (default Rachel voice)
+ELEVENLABS_VOICE_ID=21m00Tcm4TlvDq8ikWAM
+# Optional (default low-latency model)
+ELEVENLABS_MODEL_ID=eleven_turbo_v2_5
 
 # Inter-service auth (optional in dev — if unset, all requests are allowed)
 # LLM_SERVICE_TOKEN=your_shared_secret_here
