--- a/apps/web-client/package.json
+++ b/apps/web-client/package.json
@@ -41,6 +41,8 @@
     "@trpc/react-query": "^11.8.0",
     "@trpc/server": "^11.8.0",
     "@trpc/tanstack-react-query": "^11.8.0",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -60,6 +62,7 @@
     "react-dom": "19.2.3",
     "react-error-boundary": "^6.1.0",
     "react-hook-form": "^7.69.0",
+    "react-webcam": "^7.2.0",
     "sonner": "^2.0.7",
     "superjson": "^2.2.6",
     "tailwind-merge": "^3.4.0",
