adding the real time convo

--- a/apps/llm/docker-compose.yml
+++ b/apps/llm/docker-compose.yml
@@ -20,6 +20,12 @@ services:
       - PORT=3001
       - NODE_ENV=${NODE_ENV:-production}
       - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - REALTIME_GEMINI_MODEL=${REALTIME_GEMINI_MODEL:-gemini-2.5-flash}
+      - ELEVENLABS_API_KEY=${ELEVENLABS_API_KEY}
+      - ELEVENLABS_VOICE_ID=${ELEVENLABS_VOICE_ID:-21m00Tcm4TlvDq8ikWAM}
+      - ELEVENLABS_MODEL_ID=${ELEVENLABS_MODEL_ID:-eleven_flash_v2_5}
+      - ELEVENLABS_OUTPUT_FORMAT=${ELEVENLABS_OUTPUT_FORMAT:-mp3_22050_32}
+      - ELEVENLABS_OPTIMIZE_STREAMING_LATENCY=${ELEVENLABS_OPTIMIZE_STREAMING_LATENCY:-4}
       - REDIS_URL=redis://redis:6379
       - REDIS_CACHE_TTL=${REDIS_CACHE_TTL:-3600}
       - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:3000}
