--- a/apps/llm/.env.example
+++ b/apps/llm/.env.example
@@ -13,8 +13,12 @@ REALTIME_GEMINI_MODEL=gemini-2.5-flash
 ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
 # Optional (default Rachel voice)
 ELEVENLABS_VOICE_ID=21m00Tcm4TlvDq8ikWAM
-# Optional (default low-latency model)
-ELEVENLABS_MODEL_ID=eleven_turbo_v2_5
+# Optional (default fastest model, typically requires paid plan)
+ELEVENLABS_MODEL_ID=eleven_flash_v2_5
+# Optional (lower bitrate = faster stream startup)
+ELEVENLABS_OUTPUT_FORMAT=mp3_22050_32
+# Optional latency tuning range 0..4 (4 = fastest)
+ELEVENLABS_OPTIMIZE_STREAMING_LATENCY=4
 
 # Inter-service auth (optional in dev — if unset, all requests are allowed)
 # LLM_SERVICE_TOKEN=your_shared_secret_here
