--- a/apps/web-client/package.json
+++ b/apps/web-client/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.3",
+    "@elevenlabs/react": "^0.14.0",
     "@hono/clerk-auth": "^3.0.3",
     "@hono/trpc-server": "^0.4.1",
     "@hono/zod-validator": "^0.7.6",
@@ -63,6 +64,7 @@
     "react-error-boundary": "^6.1.0",
     "react-hook-form": "^7.69.0",
     "react-webcam": "^7.2.0",
+    "recharts": "^3.7.0",
     "sonner": "^2.0.7",
     "superjson": "^2.2.6",
     "tailwind-merge": "^3.4.0",
