fix: resolve ui + tsconfig + deps

--- a/apps/web-client/package.json
+++ b/apps/web-client/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.36.3",
+    "@clerk/nextjs": "^6.37.4",
     "@elevenlabs/react": "^0.14.0",
     "@hono/clerk-auth": "^3.0.3",
     "@hono/trpc-server": "^0.4.1",
@@ -55,12 +55,12 @@
     "framer-motion": "^12.34.0",
     "hono": "^4.11.1",
     "lucide-react": "^0.561.0",
-    "next": "16.0.10",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.5",
     "postgres": "^3.4.7",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-error-boundary": "^6.1.0",
     "react-hook-form": "^7.69.0",
     "react-webcam": "^7.2.0",
@@ -74,9 +74,9 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@types/culori": "^4.0.1",
-    "@types/node": "^20.19.27",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20.19.33",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9",
