--- a/package.json
+++ b/package.json
@@ -27,5 +27,14 @@
   "devDependencies": {
     "supabase": "^2.0.0",
     "typescript": "^5.7.0"
+  },
+  "dependencies": {
+    "@clerk/nextjs": "^6.37.4",
+    "framer-motion": "^12.34.0",
+    "lucide-react": "^0.564.0",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "tailwindcss": "^4.1.18"
   }
 }
