--- a/apps/llm/docker-compose.yml
+++ b/apps/llm/docker-compose.yml
@@ -23,6 +23,10 @@ services:
       - REDIS_URL=redis://redis:6379
       - REDIS_CACHE_TTL=${REDIS_CACHE_TTL:-3600}
       - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:3000}
+      - AZURE_OPENAI_ENDPOINT=${AZURE_OPENAI_ENDPOINT}
+      - AZURE_OPENAI_KEY=${AZURE_OPENAI_KEY}
+      - AZURE_OPENAI_DEPLOYMENT=${AZURE_OPENAI_DEPLOYMENT:-Phi-4-mini-instruct}
+      - AZURE_OPENAI_API_VERSION=${AZURE_OPENAI_API_VERSION:-2024-05-01-preview}
     depends_on:
       redis:
         condition: service_healthy
